--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -11,13 +11,10 @@
 
 <h1> Kullanıcı Kayıt Bilgilendirme</h1>
 
-<label th:text = "${'Isim:' +isim.getName()}"></label><br><br>
-<label th:text = "${'Soyisim:' +isim.getSurName()}"></label><br>
+<label th:text = "${'Isim:' +user.getName()}"></label><br><br>
+<label th:text = "${'Soyisim:' +user.getSurName()}"></label><br>
 <br><br>
 <label>Kullanıcı Database e kaydedildi</label>
-
-
-
 
 
 <!-- JavaScript Bundle with Popper -->
