--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,17 +10,14 @@
 <body>
 
 
-<h1>Uyelik Sayfası</h1>
-
-
 <div class="container">
 
   <div class="row">
 
-
     <div class="col-2"></div>
 
     <div class="col-8">
+      <h1>Uyelik Sayfası</h1><br>
       <form action="doregister" method="post">
 
         <div class="mb-3">
