--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,21 +6,40 @@
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
-<h1>Giriş Sayfası</h1>
-<br>
 <form action="dologin" method="post">
 
-    <label th:text = "${emaillbl}"  ></label>
-    <input name = "txtEmail"/><br>
-    <label th:text= "${passwordlbl}"></label>
-    <input name = "txtPassword"/>
-    <br><br>
-    <button type ="submit">Giriş</button>
+
+    <div class="container">
+        <div>
+            <h1>Giriş Sayfası</h1>
+        </div>
+
+        <div class="form-group">
+            <label  th:text = "${emaillbl}" for="exampleInputEmail1">Email address</label>
+            <input name = "txtEmail" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+            <label th:text= "${passwordlbl}" for="exampleInputPassword1">Password</label>
+            <input name = "txtPassword" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Giriş Yap</button>
+        <a class="btn btn-success"> Kayıt Ol</a>
+    </div>
+
+
+
+
 </form>
 <br><br><br>
-
 </body>
 </html>
